# avalanche-report

./: .djlintrc  .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  README.md  build.rs  crowdin.yml  docker-build.sh  docker-compose.yml  docker-debug-context.sh  docker-publish.sh  fly.toml  git-tag.sh  i18n.toml  justfile  package-lock.json  package.json  tailwind.config.js
.cargo/: audit.toml  config.toml
.github/workflows/: rust.yml
admin-password-hash/: Cargo.toml
admin-password-hash/src/: main.rs
benchmarks/: benchmark-tools.md  benchmark.yml
docs/: .gitignore  Forecasting.bib  avalanche-likelihood-definition.md
forecast-areas/gudauri/: forecast_area.geojson
forecast-spreadsheet/: Cargo.toml
forecast-spreadsheet/fixtures/forecasts/: Gudauri_2023_02_07T19 00_LS.xlsx
forecast-spreadsheet/fixtures/options/: options.0.3.0.json  options.0.3.1.json  options.bansko.0.3.1.json  options.gudauri.0.3.1.json
forecast-spreadsheet/src/: lib.rs  options.rs  position.rs  serde.rs
forecast-spreadsheet/src/snapshots/: forecast_spreadsheet__tests__parse_excel_spreadsheet.snap  forecast_spreadsheet__tests__parse_excel_spreadsheet_bansko.snap  forecast_spreadsheet__tests__parse_excel_spreadsheet_bansko.snap.new  forecast_spreadsheet__tests__parse_excel_spreadsheet_gudauri.snap
forecast_areas/gudauri/: Forecast_area_GE.kml  Gudauri.qgz
geo/: Cargo.toml
geo/debug/: Cargo.toml
geo/debug/src/: main.rs
geo/fixtures/: gdal2tiles.py
geo/src/: geotiff.rs  lib.rs
i18n/bg-BG/: avalanche_report.ftl
i18n/cs-CZ/: avalanche_report.ftl
i18n/en-UK/: avalanche_report.ftl
i18n/en-US/: avalanche_report.ftl
i18n/it-IT/: avalanche_report.ftl
i18n/ka-GE/: avalanche_report.ftl
i18n/pl-PL/: avalanche_report.ftl
i18n/zh-CN/: avalanche_report.ftl
migrations/: Cargo.toml
migrations/src/: lib.rs  main.rs  v0_schema_history.sql  v1_analytics.sql  v2_analytics_time_format.rs  v3_analytics_uri_parameters.rs  v5_forecast_json_cache.sql  v8_analytics_not_null.sql
src/: analytics.rs  auth.rs  cache_control.rs  current_weather.rs  database.rs  disclaimer.rs  env.rs  error.rs  forecast.rs  fs.rs  google_drive.rs  i18n.rs  index.rs  isbot.rs  logs.rs  main.rs  observations.rs  options.rs  secrets.rs  serde.rs  state.rs  templates.rs  types.rs  user_preferences.rs  utilities.rs  version.rs  weather.rs  weather_forecast.rs
src/admin/: analytics.rs  forecast_files.rs  logs.rs  mod.rs  sqlite.rs
src/admin/analytics/: graph.rs  index.rs  mod.rs
src/admin/forecast_areas/: create.rs  edit.rs  index.rs  mod.rs
src/components/: base.rs  mod.rs  util.rs
src/database/: backup.rs  mod.rs
src/database/migrations/: mod.rs  v2_analytics_time_format.rs  v3_analytics_uri_parameters.rs  v4_forecast_files.sql  v6_current_weather_cache.sql  v7_forecast_areas.sql
src/diagrams/: aspect_elevation.rs  elevation_hazard.rs  mod.rs  probability.rs  size.rs
src/diagrams/snapshots/: avalanche_report__diagrams__aspect_elevation__test__generate_svg_all_aspects.snap  avalanche_report__diagrams__aspect_elevation__test__generate_svg_all_aspects_colour.snap  avalanche_report__diagrams__aspect_elevation__test__generate_svg_alpine_n_w.snap  avalanche_report__diagrams__aspect_elevation__test__generate_svg_empty.snap  avalanche_report__diagrams__aspect_elevation__test__generate_svg_text.snap
src/forecast/: mod.rs
src/forecast_areas/: gudauri.geojson  mod.rs
src/forecasts/: files.rs  mod.rs  probability.rs
src/forecasts/schemas/: 0.3.0.json  0.3.1.json  gudauri.0.3.1.json
src/migrations/: V0__analytics.sql
src/observations/: map.js  mod.rs
src/templates/: 404.html  base.html  current_weather.html  disclaimer.html  forecast.html  index.html  observations.html  test.html  weather.html  weather_forecast.html
src/templates/admin/: analytics.html  forecast_files.html  index.html  sqlite.html
src/templates/admin/analytics/: graph.html  summaries_duration.html
src/templates/admin/forecast_areas/: create.html  edit.html  index.html
src/templates/index_html/: about.html  donations.html  sponsors.html  title.html
src/templates/macros/: current_weather.html  elements.html  forecast_intro.html  language_select.html  weather.html  weather_forecast.html  wind_unit_select.html
src/templates/test/: inside.html
static/map/: map.css
utils/: Cargo.toml
utils/src/: serde.rs
