[package]
name = "avalanche-report"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
migrations = { path = "./migrations" }
toml-env = { workspace = true }
forecast-spreadsheet = { path = "./forecast-spreadsheet" }
utils = { path = "./utils" }
# geo = { path = "./geo" }
average = "0.14.1"
axum = { version = "0.7.4", features = ["macros"] }
headers = "0.4.0"
axum-extra = { version = "0.9.2", default-features = false, features = ["cookie"] }
base64 = { workspace = true }
bcrypt = "0.15.0"
ansi-to-html = "0.2.1"
eyre = { workspace = true }
bytes = "1.4.0"
url = { version = "2.3", features = ["serde"] }
serde = { workspace = true }
erased-serde = "0.4.2"
serde_json = { workspace = true }
serde_urlencoded = "0.7.1"
serde_with = "3.4.0"
http-serde = "2.0.0"
color-eyre = "0.6"
fluent = "0.16.0"
fluent-langneg = "0.13.0"
futures = "0.3.26"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
http = { workspace = true }
governor = "0.6.0"
tracing = { workspace = true }
mime_guess = "2.0.4"
mime = "0.3.16"
rust-embed = { version = "8.0.0", features = ["include-exclude"] }
regex = "1.7.1"
tower = "0.4"
humantime = "2.1.0"
nonzero_ext = { workspace = true }
http-body = "1.0.0"
time-tz = { workspace = true }
tower-http = { version = "0.5.1", features = ["trace", "auth"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.14" }
thiserror = "1.0.38"
libsqlite3-sys = { version = "0.27", features = ["bundled"] }
sqlx = { workspace = true }
axum-reporting = { workspace = true }
# axum-reporting = { path = "../axum-reporting" }
toml = "0.8.0"
i18n-embed = { git = "https://github.com/kellpossible/cargo-i18n", branch = "autoreload", features = ["fluent-system", "filesystem-assets", "autoreload"] }
i18n-embed-fl = { git = "https://github.com/kellpossible/cargo-i18n", branch = "autoreload" }
# i18n-embed = { path = "../cargo-i18n/i18n-embed", version = "0.14.0", features = ["fluent-system", "filesystem-assets", "autoreload"] }
# i18n-embed-fl = { path = "../cargo-i18n/i18n-embed-fl", version = "0.8.0"}
once_cell = { workspace = true }
unic-langid = { workspace = true, features = ["serde"] }
time = { workspace = true }
resvg = { version = "0.39.0", default-features = false, features = ["text", "memmap-fonts"] } # required only for svg to png diagram generation
reqwest = { version = "0.12.0", default-features = false, features = ["json", "stream", "rustls-tls"] }
secrecy = { version = "0.8.0", features = ["serde"] }
usvg-text-layout = { version = "0.38.0", default-features = false, features = ["memmap-fonts"]}
buildstructor = "0.5.4"
minijinja = { version = "1.0.7", features = ["loader", "builtins", "urlencode", "json"] }
urlencoding = "2.1.2"
minijinja-autoreload = { version = "1.0.7" }
async-trait = "0.1.64"
uuid = { workspace = true }
sha2 = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
pulldown-cmark = { version = "0.10.0", default-features = false, features = ["html"] }
enum-iterator = { workspace = true }
num-traits = "0.2"
rusty-s3 = "0.5.0"
cronchik = { version = "2.0.4", features = ["time"] }
tempfile = "3.8.0"
md-5 = "0.10.5"
humansize = "2.1.3"
isbot = "0.1.3"
page-turner = "1.0.0"

[dev-dependencies]
insta = { version = "1.26.0", features = ["json", "redactions"]}
assert-json-diff = { workspace = true }
proptest = "1.2.0"

[build-dependencies]
fs_extra = "1.2.0"

[workspace]
members = [
    "admin-password-hash",
    "forecast-spreadsheet",
    "geo",
    "geo/debug", "migrations",
    "utils",
    "migrations",
]

[workspace.dependencies]
tracing = "0.1"
base64 = "0.22.0"
http = "1.1.0"
sha2 = "0.10.6"
time = { version = "0.3.17", features = ["serde", "parsing", "formatting", "macros"] }
nonzero_ext = "0.3.0"
time-tz = "2.0.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
serde_repr = "0.1.16"
indexmap = "1.9.3"
eyre = "0.6.8"
once_cell = "1.19.0"
unic-langid = "0.9.1"
num-traits = "0.2"
num-derive = "0.4"
enum-iterator = "1.4.1"
assert-json-diff = "2.0.2"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "json", "time", "uuid"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
tokio = "1.36.0"
axum-reporting = { git = "https://github.com/kellpossible/axum-reporting.git" }
toml-env = "1.2.0"
