[package]
name = "avalanche-report"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# axum-reporting = { path = "../axum-reporting" }
# geo = { path = "./geo" }
# i18n-embed = { path = "../cargo-i18n/i18n-embed", version = "0.14.0", features = ["fluent-system", "filesystem-assets", "autoreload"] }
# i18n-embed-fl = { path = "../cargo-i18n/i18n-embed-fl", version = "0.8.0"}
ansi-to-html = "0.2.2"
async-trait = "0.1.84"
average = "0.15.1"
axum = { version = "0.8.1", features = ["macros", "multipart"] }
axum-extra = { version = "0.10.0", default-features = false, features = ["cookie", "typed-routing"] }
axum-reporting = { workspace = true }
base64 = { workspace = true }
bcrypt = "0.16.0"
buildstructor = "0.5.4"
bytes = "1.4.0"
cronchik = { version = "2.0.4", features = ["time"] }
color-eyre = { workspace = true }
enum-iterator = { workspace = true }
erased-serde = "0.4.5"
eyre = { workspace = true }
fluent = "0.16.1"
fluent-langneg = "0.13"
forecast-spreadsheet = { path = "./forecast-spreadsheet" }
futures = "0.3.31"
git-version = "0.3.9"
governor = "0.6.0"
headers = "0.4.0"
http = { workspace = true }
http-body = "1.0.0"
http-serde = "2.0.0"
humansize = "2.1.3"
humantime = "2.1.0"
i18n-embed = { version = "0.15.0", features = ["fluent-system", "filesystem-assets", "autoreload"] }
i18n-embed-fl = "0.9.1"
indexmap = { workspace = true, features = ["serde"] }
isbot = "0.1.3"
md-5 = "0.10.5"
migrations = { path = "./migrations" }
mime = "0.3.16"
mime_guess = "2.0.4"
minijinja = { version = "1.0.7", features = ["loader", "builtins", "urlencode", "json"] }
minijinja-autoreload = { version = "1.0.7" }
nonzero_ext = { workspace = true }
num-traits = "0.2"
once_cell = { workspace = true }
page-turner = "1.0.0"
pulldown-cmark = { version = "0.10.0", default-features = false, features = ["html"] }
regex = "1.7.1"
reqwest = { version = "0.12.0", default-features = false, features = ["json", "stream", "rustls-tls"] }
resvg = { version = "0.39.0", default-features = false, features = ["text", "memmap-fonts"] } # required only for svg to png diagram generation
rust-embed = { version = "8.0.0", features = ["include-exclude"] }
rusty-s3 = "0.5.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = "0.7.1"
serde_with = "3.4.0"
sha2 = { workspace = true }
sqlx = { workspace = true }
tempfile = "3.8.0"
thiserror = "2.0.9"
time = { workspace = true }
time-tz = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.14" }
toml = "0.8.19"
toml-env = { workspace = true }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "auth", "fs"] }
tracing = { workspace = true }
tracing-appender = "0.2"
tracing-subscriber = { workspace = true }
unic-langid = { workspace = true, features = ["serde"] }
url = { version = "2.3", features = ["serde"] }
urlencoding = "2.1.2"
usvg-text-layout = { version = "0.38.0", default-features = false, features = ["memmap-fonts"]}
utils = { path = "./utils" }
uuid = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
assert-json-diff = { workspace = true }
proptest = "1.2.0"

[build-dependencies]
fs_extra = "1.2.0"

[workspace]
members = [
    "admin-password-hash",
    "forecast-spreadsheet",
    "geo",
    "geo/debug",
    "utils",
    "migrations",
]

[workspace.dependencies]
assert-json-diff = "2.0.2"
axum-reporting = { git = "https://github.com/kellpossible/axum-reporting.git" }
base64 = "0.22.1"
color-eyre = "0.6"
enum-iterator = "1.4.1"
eyre = "0.6.8"
http = "1.1.0"
indexmap = "1.9.3"
insta = { version = "1.41.1", features = ["json", "redactions"]}
nonzero_ext = "0.3.0"
num-derive = "0.4"
num-traits = "0.2"
once_cell = "1.19.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
serde_repr = "0.1.16"
sha2 = "0.10.6"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite", "macros", "json", "time", "uuid"] }
time = { version = "0.3.17", features = ["serde", "parsing", "formatting", "macros"] }
time-tz = "2.0.0"
tokio = "1.42.0"
toml-env = "1.2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
unic-langid = "0.9.1"
uuid = { version = "1.3.0", features = ["v4", "serde"] }