[package]
name = "forecast-spreadsheet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.19.1"
indexmap = { version = "1.9.3", features = ["serde"] }
thiserror = "1.0.38"
time = { version = "0.3.19", features = ["alloc", "parsing", "serde"] }
unic-langid = { version = "0.9.1", features = ["serde"] }
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }
once_cell = "1.17.1"

[dev-dependencies]
insta = { version = "1.29.0", features = ["json"] }
