[package]
name = "forecast-spreadsheet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.19.1"
indexmap = { workspace = true, features = ["serde"] }
thiserror = "1.0.38"
time = { workspace = true, features = ["alloc", "parsing", "serde", "formatting"] }
time-tz = { workspace = true }
unic-langid = { workspace = true, features = ["serde"] }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_repr = { workspace = true }
once_cell = { workspace = true }
eyre = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }
enum-iterator = { workspace = true }


[dev-dependencies]
insta = { version = "1.29.0", features = ["json"] }
