[package]
name = "migrations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml-env = { workpace = true }
serde = { workspace = true }
sqlx = { workspace = true }
base64 = { workspace = true }
eyre = { workspace = true }
sha2 = { workspace = true }
time = { workspace = true }
nonzero_ext = { workspace = true }
tracing = { workspace = true }
http = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.18"
color-eyre = "0.6.3"
