[package]
name = "debug-geo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
show-image = "0.13.1"
plotly = { version = "0.8.4", features = ["plotly_ndarray"] }
geo = { path = "../" }
eyre = { workspace = true }
